
[package]
name = "reddit-video-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
futures-util = "0.3"
mime = "0.3"
